<resources>
    <!--<string name="facebook_app_id" translatable="false">444788142840070</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb444788142840070</string>
  <string name="facebook_app_id" translatable="false">182598709008860</string>
           <string name="fb_login_protocol_scheme" translatable="false">fb182598709008860</string>-->

    <string name="app_name">TheOne</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="alldeals">All Deals</string>
    <string name="hotdeals">Hot Deals</string>
    <string name="allcitydeals">All City Deals</string>

    <string name="error">Error</string>
    <string name="internet_error">Something went wrong. Please retry</string>
    <string name="ok">OK</string>register_message
    <string name="please_wait">Please Wait ...</string>
    <string name="no_winners">Nothing Found</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="highlights">Highlights</string>
    <string name="termsandconditions"><![CDATA[Terms & Conditions]]></string>


    <!--Login page -->
    <string name="login">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">Email(Option)</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="yourname">Your Name</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>

    <string name="enter_here">Enter here</string>
    <string name="sel_country_code">Select Country Code</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="all_fields_compulsory">All fields are compulsory</string>
    <string name="reg_error">Registration Error</string>
    <string name="reg_success">Registration Successful\nActivate your Account</string>
    <string name="login_empty">Email &amp; Password can not be empty</string>
    <string name="login_success">Login Successful</string>
    <string name="activation_pending_login">Kindly Activate your Account to Login</string>
    <string name="invalid_login_details">Invalid email or password</string>

    <string name="add_card">Add CARD</string>
    <string name="enter_the_12_digit_code_provided_on_your_one_card_below">Enter the 12 digit code provided on your One Card below</string>
    <string name="enter_code_here">Enter Code Here</string>

    <string name="login_via">or Sign With ,,</string>
    <string name="register_message"><![CDATA[<font color=#ffffff>Not a Member yet?</font> <font color=#f4d12b>Create Account</font>]]></string>
    <string name="create_account">Create Account</string>
    <string name="login_message"><![CDATA[<font color=#ffffff>Already have an account?</font> <font color=#f4d12b>Log In</font>]]></string>


    <string name="my_deals">My Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="select_language">Select Language</string>
    <string name="locale_lang">lang</string>
    <string name="change_language">Change Language</string>

    <string name="otp_wait_verify">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="otp_message">(Enter the OTP below in case we fail to detect the SMS automatically)</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="select_an_option">Select an option</string>
    <string name="enter_your_phone_number_for_verification">Enter your phone number for verification</string>
    <string name="verify_phone">Verify Phone</string>

    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="send_us_your_query">Send us your Query</string>
    <string name="your_name">Your Name</string>
    <string name="message">Message</string>
    <string name="send_query">SEND QUERY</string>
    <string name="call_us">Call Us</string>
    <string name="copyright_u00a9_mazaya_facilities">Copyright © Mazaya Facilities</string>
    <string name="create_account_text">Get deals in few clicks. \n We hope you\'ll love OneCard.</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">VERIFY</string>
    <string name="featured_deals">Featured Deals</string>
    <string name="follow_us">Follow Us</string>
    <string name="by_mazaya_facilites">By Mazaya Facilites</string>
    <string name="grab_deal">Get Deal</string>
    <string name="phone_permissions">Give Permission To verify Mobile Number</string>
    <string name="welcome">Welcome</string>
    <string name="card_valid_till">Card Valid till</string>
    <string name="no_card">No Card</string>
    <string name="card_applied">Card Applied</string>
    <string name="search_results">Search Results for</string>
    <string name="incorrect_phone">Incorrect Phone Number entered.</string>
    <string name="you_need_login">You need to login to grab deal</string>
    <string name="deal_grabbed">Deal Successfully grabbed :)</string>

    <string name="recover_via_email">Recover via Email</string>
    <string name="recover_via_sms">Recover via SMS</string>
    <string name="country_code">Code</string>
    <string name="recovery_email_sent">We have sent you a recovery email.\n
    Kindly check your email.</string>
    <string name="no_account_with_phone">No Account exists with this mobile</string>
    <string name="phone_not_verified">Your mobile was not verified\n Use email to recover password</string>
    <string name="update_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_conf">Confirm New Password</string>
    <string name="pass_updated">Your Password has been Updated</string>
    <string name="old_pass_not_match">Your current Password doesnt match our records</string>
    <string name="set_new_pass">Set New Password</string>
    <string name="pass_dont_match">Password &amp; Confirm Password doesnt match</string>
    <string name="complete_profile">Complete your Profile</string>
    <string name="enter_details">Enter Details</string>
    <string name="locations">Locations</string>
    <string name="welcome_guest">Welcome Guest</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="you_are_not_logged_in">You are not logged in.</string>
    <string name="edit_profile_success">Profile updated</string>
    <string name="update_error">Error while updating</string>
    <string name="change_password">Change Password</string>
    <string name="set_pass">Set Password</string>
    <string name="orderno">Order no</string>
    <string name="grabbed_on">Grabbed on</string>
    <string name="available">Available</string>
    <string name="used">Used</string>
    <string name="min_password_length">Minimum Password length is 8</string>
    <string name="annual_discounted_deals">Annual Discounted Deals</string>
    <string name="invalid_card">Invalid Activation Code Number</string>
    <string name="switching_city">Switching City.. Please Wait</string>
    <string name="don_t_have_activation_code">Don\'t have activation code ?</string>
    <string name="one_year_validity">One Year Validity</string>
    <string name="pay_via">Pay VIA</string>
    <string name="myorders">My Orders</string>
    <string name="powered_by_eq_softwares_llc_amp_global_connenction_llc"><![CDATA[Powered by EQ SOFTWARES LLC & GLOBAL CONNENCTION LLC]]></string>
    <string name="activation_code_copied">Activation code copied !</string>
    <string name="share_using">Share using</string>
    <string name="order_date">Order Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="processing_order_you_will_be_notified_once_the_activation_code_is_available">Processing Order. You will be notified once the activation code is available.</string>
    <string name="one_year_validity_code">ONE YEAR VALIDITY</string>


    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="sure_logout">Are you sure you want to logout ?</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_theonedeals_com">info@theonedeals.com</string>
    <string name="agree_error">Please agree to terms &amp; conditions</string>

    <string name="phone_number_not_start_with">Please Remove first 0 from Phone Number</string>

    <string name="agree_text"><![CDATA[I Agree to Terms & Conditions]]></string>
    <string name="notification">Notifications</string>
    <string name="username">Username</string>
    <string name="theone_deals">TheOne Deals</string>
    <string name="email_username_mobile">Email / Username / Mobile</string>
    <string name="remember_me">Remember Me</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="txt_have_account">Already Have Account</string>
    <string name="continuec">Continue</string>
    <string name="repeate_password_error">You Repeat Password Is incorrect</string>
    <string name="get_start_txt">Get Start</string>
    <string name="intro_text">If you\'re offered a seat on a rocket ship, don\'task what seat! Just geton.</string>
    <string name="Next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_not_option">Email</string>
    <string name="reset_password">Rest Password</string>
    <string name="update_info">Update Info</string>
    <string name="update_profile">Update</string>


</resources>
