<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F0F2"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="40dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="10dp"
        android:background="@color/color_for_login_body">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/intro_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_start_txt"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_text"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_dots"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/card"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="3dp"
            android:src="@drawable/dot"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="3dp"
            android:src="@drawable/dot2" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="3dp"
            android:src="@drawable/dot2" />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="3dp"
            android:src="@drawable/dot2" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_Next"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/next_btn_bg"
        android:layout_marginEnd="-10dp"
        android:text="@string/Next"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/arrow_forward_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>